-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Steps to reproduce the problem:
1. Configure a nodemap (noRootSquash) on MGS with:
trusted=1
admin=1
squash_uid=0
squash_gid=0
Client NIDs correctly added to the nodemap ranges.
2. Mount the Lustre filesystem on a client listed in the nodemap range.
3. As root user (uid=0) on the client, attempt to:
touch a new file on the Lustre mount.
mkdir a new directory under the mount.
ls or chown inside existing user-owned directories.
4. Result:
Permission Denied errors are observed.
Root user cannot create files or directories on Lustre, despite nodemap settings intended to disable root squash.
5. Filesystem remounts have been attempted — no change.